log
Thu 23 Mar 2023 03:31:34 PM UTC: 
 tests:  0|6
total_score: 0/70
7e7ef7a
Thu 23 Mar 2023 03:57:12 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->lista =  (List *) malloc(sizeof(List));
      |       ^~
list.c:34:3: error: ‘lista’ undeclared (first use in this function)
   34 |   lista->head=null
      |   ^~~~~
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:34:15: error: ‘null’ undeclared (first use in this function)
   34 |   lista->head=null
      |               ^~~~
list.c:34:19: error: expected ‘;’ before ‘lista’
   34 |   lista->head=null
      |                   ^
      |                   ;
   35 |   lista->tail=null
      |   ~~~~~            
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
492875d
Thu 23 Mar 2023 03:57:32 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->lista =  (List *) malloc(sizeof(List));
      |       ^~
list.c:34:3: error: ‘lista’ undeclared (first use in this function)
   34 |   lista->head = null;
      |   ^~~~~
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:34:17: error: ‘null’ undeclared (first use in this function)
   34 |   lista->head = null;
      |                 ^~~~
Compilation failed
df4b0fa
Thu 23 Mar 2023 03:57:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->lista =  (List *) malloc(sizeof(List));
      |       ^~
list.c:34:3: error: ‘lista’ undeclared (first use in this function)
   34 |   lista->head = null;
      |   ^~~~~
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:34:17: error: ‘null’ undeclared (first use in this function)
   34 |   lista->head = null;
      |                 ^~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
86dfa60
Thu 23 Mar 2023 03:58:03 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->lista =  (List *) malloc(sizeof(List));
      |       ^~
list.c:34:3: error: ‘lista’ undeclared (first use in this function)
   34 |   lista->head = NULL;
      |   ^~~~~
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a94036b
Thu 23 Mar 2023 03:58:14 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘->’ token
   33 |   List->lista =  (List *) malloc(sizeof(List));
      |       ^~
list.c:35:3: error: ‘lista’ undeclared (first use in this function)
   35 |   lista->head = NULL;
      |   ^~~~~
list.c:35:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
66a2a0f
